For translations. Degree conversions. 2.1

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,4 +5,4 @@ src/calculatorgui_impl.cpp
 src/calculatorgui.cpp
 src/calculatorgui.h
 src/functions.cpp
-src/units_conversion.cpp
+src/muparser/muParserError.cpp
