libs: muparser: Don'y install complete lib.

--- a/libs/ocpn-muparser/CMakeLists.txt
+++ b/libs/ocpn-muparser/CMakeLists.txt
@@ -9,9 +9,8 @@ project(ocpn_muparser)
 set(ENABLE_SAMPLES OFF CACHE BOOL "Enable samples build" FORCE)
 set(ENABLE_OPENMP OFF CACHE BOOL "Use OpenMP multithreading" FORCE)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libs" FORCE)
-set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "build type, perhaps Debug")
 
-add_subdirectory(muparser)
+add_subdirectory(muparser EXCLUDE_FROM_ALL)
 
 add_library(muparser_if INTERFACE)
 add_library(muparser::muparser ALIAS muparser_if)
