--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,8 @@ debian-steps: &debian-steps
   steps:
     - checkout
     - run: ci/circleci-build-debian.sh
-    - run: sh -c "ldd  build/app/*/lib/opencpn/*.so"
-    - run: cd build; /bin/bash < upload.sh
-    - run: python3 ci/git-push
+    - run: sh -c "cd /build-$OCPN_TARGET; /bin/bash < upload.sh"
+    - run: sh -c "ci/git-push.sh /build-$OCPN_TARGET"
 
 flatpak-steps: &flatpak-steps
   steps:
@@ -20,17 +19,18 @@ flatpak-steps: &flatpak-steps
         key: <<parameters.cache-key>>-{{ checksum "ci/circleci-build-flatpak.sh" }}
         paths:
           - /home/circleci/.local/share/flatpak/repo
-    - run: cd build; /bin/bash < upload.sh
-    - run: python3 ci/git-push
+    - run: cd /build-flatpak; /bin/bash < upload.sh
+    - run: ci/git-push.sh /build-flatpak
 
 jobs:
 
-  build-raspbian-bullseye:
+  build-bionic-armhf:
     machine:
       image: ubuntu-2004:202101-01
     resource_class: arm.medium
     environment:
-      - OCPN_TARGET: flatpak-arm64
+      - DOCKER_IMAGE: opencpn/ubuntu-bionic-armhf:v1
+      - TARGET_TUPLE: ubuntu;18.04;armhf
       - CMAKE_BUILD_PARALLEL_LEVEL: 2
     parameters:
       cache-key:
@@ -38,9 +38,54 @@ jobs:
         default: "fp-arm20-v2"
     steps:
       - checkout
-      - run: ci/generic-build-raspbian-armhf.sh
-      - run: cd build; /bin/bash < upload.sh
-      - run: python3 ci/git-push
+      - run: ci/circleci-build-ubuntu-armhf.sh
+      - run: cd build-ubuntu; /bin/bash < upload.sh
+      - run: ci/git-push.sh build-ubuntu
+
+  build-focal-armhf:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
+    environment:
+      - TARGET_TUPLE: ubuntu;20.04;armhf
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+    parameters:
+      cache-key:
+        type: string
+        default: "fp-arm20-v2"
+    steps:
+      - checkout
+      - run: ci/circleci-build-ubuntu-armhf.sh
+      - run: cd build-ubuntu; /bin/bash < upload.sh
+      - run: ci/git-push.sh build-ubuntu
+
+  build-bullseye-armhf:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
+    environment:
+      - TARGET_TUPLE: debian;11;armhf
+      - OCPN_TARGET: bullseye
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+    steps:
+      - checkout
+      - run: ci/circleci-build-debian-armhf.sh
+      - run: cd build-debian; /bin/bash < upload.sh
+      - run: ci/git-push.sh build-debian
+
+  build-buster-armhf:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
+    environment:
+      - TARGET_TUPLE: debian;10;armhf
+      - OCPN_TARGET: buster
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+    steps:
+      - checkout
+      - run: ci/circleci-build-debian-armhf.sh
+      - run: cd build-debian; /bin/bash < upload.sh
+      - run: ci/git-push.sh build-debian
 
   build-flatpak-arm64:
     machine:
@@ -55,19 +100,6 @@ jobs:
         default: "fp-arm20-v2"
     <<: *flatpak-steps
 
-  build-flatpak-x86-1808:
-    machine:
-      image: ubuntu-2004:202010-01
-    environment:
-      - OCPN_TARGET: flatpak
-      - CMAKE_BUILD_PARALLEL_LEVEL: 2
-      - BUILD_1808: "true"
-    parameters:
-      cache-key:
-        type: string
-        default: "fp-x86-18-v2"
-    <<: *flatpak-steps
-
   build-flatpak-x86-2008:
     machine:
       image: ubuntu-2004:202010-01
@@ -80,7 +112,19 @@ jobs:
         default: "fp-x86-20-v2"
     <<: *flatpak-steps
 
- 
+  build-flatpak-x86-wx315:
+    machine:
+      image: ubuntu-2004:202010-01
+    environment:
+      - OCPN_TARGET: flatpak
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+      - BUILD_WX31: true
+    steps:
+      - checkout
+      - run: ci/circleci-build-flatpak.sh
+      - run: cd /build-flatpak; /bin/bash < upload.sh
+      - run: ci/git-push.sh /build-flatpak
+
   build-macos:
     macos:
       xcode: "12.5.1"
@@ -90,22 +134,14 @@ jobs:
     steps:
       - checkout
       - run: ci/circleci-build-macos.sh
-      - run: sh -c "otool -L build/app/*/OpenCPN.app/Contents/PlugIns/*.dylib"
-      - run: cd build; /bin/bash < upload.sh
-      - run: python3 ci/git-push
-
-  build-xenial:
-    docker:
-      - image: circleci/buildpack-deps:xenial-scm
-    environment:
-      - OCPN_TARGET: xenial
-      - CMAKE_BUILD_PARALLEL_LEVEL: 2
-      - USE_DEADSNAKES_PY37: 1
-    <<: *debian-steps
+      - run: >
+          sh -c "otool -L build-osx/app/*/OpenCPN.app/Contents/PlugIns/*.dylib"
+      - run: cd build-osx; /bin/bash < upload.sh
+      - run: ci/git-push.sh  build-osx
 
   build-bionic:
     docker:
-      - image: circleci/buildpack-deps:bionic-scm
+      - image: cimg/base:stable-18.04
     environment:
       - OCPN_TARGET: bionic
       - CMAKE_BUILD_PARALLEL_LEVEL: 2
@@ -113,7 +149,7 @@ jobs:
 
   build-bionic-gtk3:
     docker:
-      - image: circleci/buildpack-deps:bionic-scm
+      - image: cimg/base:stable-18.04
     environment:
       - BUILD_GTK3: true
       - CMAKE_BUILD_PARALLEL_LEVEL: 2
@@ -122,17 +158,37 @@ jobs:
 
   build-focal:
     docker:
-      - image: circleci/buildpack-deps:focal-scm
+      - image: cimg/base:stable-20.04
     environment:
       - OCPN_TARGET: focal
       - CMAKE_BUILD_PARALLEL_LEVEL: 2
     <<: *debian-steps
+
+  build-focal-wx31:
+    docker:
+      - image: cimg/base:stable-20.04
+    environment:
+      - OCPN_TARGET: focal-wx31
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+    steps:
+      - checkout
+      - run: ci/circleci-build-debian-wx31.sh
+      - run: sh -c "cd /build-$OCPN_TARGET; /bin/bash < upload.sh"
+      - run: sh -c "ci/git-push.sh /build-$OCPN_TARGET"
 
   build-buster:
     docker:
       - image: circleci/buildpack-deps:buster-scm
     environment:
       - OCPN_TARGET: buster
+      - CMAKE_BUILD_PARALLEL_LEVEL: 2
+    <<: *debian-steps
+
+  build-bullseye:
+    docker:
+      - image: circleci/buildpack-deps:bullseye-scm
+    environment:
+      - OCPN_TARGET: bullseye
       - CMAKE_BUILD_PARALLEL_LEVEL: 2
     <<: *debian-steps
 
@@ -145,8 +201,8 @@ jobs:
     steps:
       - checkout
       - run: ci/circleci-build-android.sh
-      - run: cd build; /bin/bash < upload.sh
-      - run: python3 ci/git-push
+      - run: sh -c "cd /build-$OCPN_TARGET; /bin/bash < upload.sh"
+      - run: sh -c "ci/git-push.sh /build-$OCPN_TARGET"
 
   build-android-armhf:
     docker:
@@ -157,9 +213,8 @@ jobs:
     steps:
       - checkout
       - run: ci/circleci-build-android.sh
-      - run: cd build; /bin/bash < upload.sh
-      - run: python3 ci/git-push
-
+      - run: sh -c "cd /build-$OCPN_TARGET; /bin/bash < upload.sh"
+      - run: sh -c "ci/git-push.sh /build-$OCPN_TARGET"
 
 std-filters: &std-filters
   filters:
@@ -176,16 +231,13 @@ workflows:
       - build-flatpak-arm64:
           <<: *std-filters
 
-      - build-flatpak-x86-1808:
-          <<: *std-filters
-
       - build-flatpak-x86-2008:
           <<: *std-filters
- 
-      - build-macos:
+
+      - build-flatpak-x86-wx315:
           <<: *std-filters
 
-      - build-xenial:
+      - build-macos:
           <<: *std-filters
 
       - build-bionic-gtk3:
@@ -197,7 +249,13 @@ workflows:
       - build-focal:
           <<: *std-filters
 
+      - build-focal-wx31:
+          <<: *std-filters
+
       - build-buster:
+          <<: *std-filters
+
+      - build-bullseye:
           <<: *std-filters
 
       - build-android-arm64:
@@ -206,7 +264,14 @@ workflows:
       - build-android-armhf:
           <<: *std-filters
 
-      - build-raspbian-bullseye:
+      - build-bionic-armhf:
           <<: *std-filters
 
- 
+      - build-focal-armhf:
+          <<: *std-filters
+
+      - build-bullseye-armhf:
+          <<: *std-filters
+
+      - build-buster-armhf:
+          <<: *std-filters
